fixed balloons on mobile

--- a/input.css
+++ b/input.css
@@ -35,15 +35,15 @@
 
 @keyframes floatingC {
     0% {
-        transform: translate(0, 0px);
+        transform: translate(0, 0%);
     }
 
     50% {
-        transform: translate(0, 15px);
+        transform: translate(0, 3%);
     }
 
     100% {
-        transform: translate(0, -0px);
+        transform: translate(0, 0%);
     }
 }
 
@@ -85,7 +85,7 @@
     }
 
     50% {
-        transform: translate(0, 14px);
+        transform: translate(0, 3.25%);
     }
 
     100% {
@@ -131,7 +131,7 @@
     }
 
     50% {
-        transform: translate(0, 11px);
+        transform: translate(0, 4%);
     }
 
     100% {
@@ -177,7 +177,7 @@
     }
 
     50% {
-        transform: translate(0, 15px);
+        transform: translate(0, 5%);
     }
 
     100% {
